--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "nhomeserver",
   "version": "0.0.1",
-  "dependencies" : {
-    "socket.io-client" : "0.9.x",
-    "node-hue-api": "0.2.x"
+  "dependencies": {
+    "node-hue-api": "0.2.x",
+    "node-uuid": "1.4.x",
+    "socket.io-client": "0.9.x"
   },
   "private": true
 }
-
