Add WeMo support
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@92697 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "node-hue-api": "0.2.x",
     "node-uuid": "1.4.x",
-    "socket.io-client": "0.9.x"
+    "socket.io-client": "0.9.x",
+    "wemo": "0.1.x"
   },
   "private": true
 }
