--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "node-hue-api": "0.2.x",
     "node-uuid": "1.4.x",
     "socket.io-client": "0.9.x",
-    "wemo": "0.1.x"
+    "wemo": "0.1.x",
+    "upnp-controlpoint": "0.0.2"
   },
   "private": true
 }
