Add dep on xml2js
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@95137 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "node-uuid": "1.4.x",
     "socket.io-client": "0.9.x",
     "wemo": "0.1.x",
-    "upnp-controlpoint": "0.0.2"
+    "upnp-controlpoint": "0.0.2",
+    "xml2js": "0.4.x"
   },
   "private": true
 }
