Initial LG TV support
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@95806 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "socket.io-client": "0.9.x",
     "wemo": "0.1.x",
     "upnp-controlpoint": "0.0.2",
-    "xml2js": "0.4.x"
+    "xml2js": "0.4.x",
+    "lg-tv-api": "0.1.x"
   },
   "private": true
 }
