--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "wemo": "0.1.x",
     "upnp-controlpoint": "0.0.2",
     "xml2js": "0.4.x",
-    "lg-tv-api": "0.1.x"
+    "lg-tv-api": "0.1.x",
+    "home-controller": "0.5.x"
   },
   "private": true
 }
