--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lg-tv-api": "0.1.x",
     "home-controller": "0.5.x",
     "adm-zip": "0.4.x",
-    "simple-itach": "0.2.x"
+    "simple-itach": "0.2.x",
+    "samsung-remote": "1.2.x"
   },
   "private": true
 }
