Initial Fibaro support @skipchecks@
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@96802 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "home-controller": "0.5.x",
     "adm-zip": "0.4.x",
     "simple-itach": "0.2.x",
-    "samsung-remote": "1.2.x"
+    "samsung-remote": "1.2.x",
+    "fibaro-api": "~0.1.0",
+    "request": "~2.44.0"
   },
   "private": true
 }
