--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "simple-itach": "0.2.x",
     "samsung-remote": "1.2.x",
     "fibaro-api": "~0.1.1",
-    "request": "~2.44.0"
+    "request": "~2.44.0",
+    "node-schedule": "~0.1.13"
   },
   "private": true
 }
