--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "socket.io-client": "0.9.17",
     "tcp-ping": "0.1.1",
     "wemo": "0.1.1",
-    "xml2js": "0.2.8"
+    "xml2js": "0.2.8",
+    "netatmo": "1.1.1"
   },
   "private": true
 }
