--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "wemo": "0.1.1",
     "xml2js": "0.2.8",
     "netatmo": "1.1.1",
-    "q": "1.0.1"
+    "q": "1.0.1",
+    "bunyan": "1.3.2",
+    "bunyan-prettystream": "0.1.3"
   },
   "private": true
 }
