--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "netatmo": "1.1.1",
     "q": "1.0.1",
     "bunyan": "1.3.2",
-    "bunyan-prettystream": "0.1.3"
+    "bunyan-prettystream": "0.1.3",
+    "commander": "~2.6.0"
   },
   "private": true
 }
