--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "request": "2.51.0",
     "samsung-remote": "1.2.4",
     "simple-itach": "0.2.1",
-    "socket.io-client": "0.9.17",
+    "socket.io-client": "*",
     "tcp-ping": "0.1.1",
     "wemo": "0.1.1",
     "xml2js": "0.2.8",
