--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "request": "2.53.0",
     "samsung-remote": "1.2.4",
     "simple-itach": "0.2.1",
-    "socket.io-client": "*",
+    "socket.io-client": "1.3.3",
     "tcp-ping": "0.1.1",
     "wemo": "0.1.1",
     "xml2js": "0.2.8",
@@ -22,7 +22,7 @@
     "q": "1.0.1",
     "bunyan": "1.3.2",
     "bunyan-prettystream": "0.1.3",
-    "commander": "~2.6.0"
+    "commander": "2.6.0"
   },
   "private": true
 }
