--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "request": "2.53.0",
     "samsung-remote": "1.2.4",
     "simple-itach": "0.2.1",
-    "socket.io-client": "1.3.3",
+    "socket.io-client": "~1.3.4",
     "tcp-ping": "0.1.1",
     "wemo": "0.1.1",
     "xml2js": "0.2.8"
