--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "bunyan-prettystream": "0.1.3",
     "chroma-js": "0.6.1",
     "commander": "2.6.0",
+    "ejs": "2.2.4",
+    "express": "4.11.2",
     "fibaro-api": "0.1.1",
     "firebase": "2.2.0",
     "home-controller": "0.5.2",
@@ -21,9 +23,11 @@
     "request": "2.53.0",
     "samsung-remote": "1.2.4",
     "simple-itach": "0.2.1",
-    "socket.io-client": "~1.3.4",
+    "socket.io": "1.3.4",
+    "socketio-wildcard": "0.1.1",
     "tcp-ping": "0.1.1",
     "wemo": "0.2.0",
+    "ws": "0.7.1",
     "xml2js": "0.4.5"
   },
   "private": true
