Avoid variable shadowing
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@111563 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/.jshintrc
+++ b/.jshintrc
@@ -6,5 +6,6 @@
   "camelcase": false,
   "curly": false,
   "forin": false,
-  "singleGroups": false
+  "singleGroups": false,
+  "shadow": "outer"
 }
