--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "adm-zip": "0.4.4",
+    "buffer-indexof": "0.0.2",
     "bunyan": "1.3.4",
     "bunyan-prettystream": "0.1.3",
     "chroma-js": "0.6.1",
@@ -13,7 +14,7 @@
     "firebase": "2.2.1",
     "home-controller": "0.5.2",
     "ip": "0.3.2",
-    "jpeg-stream": "^0.1.0",
+    "jpeg-stream": "0.1.0",
     "lifx": "0.2.1",
     "netatmo": "1.1.1",
     "node-hue-api": "1.0.0",
