--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "home-controller": "0.5.2",
     "ip": "0.3.2",
     "lifx": "0.2.1",
+    "mjpeg-consumer": "0.4.0",
     "netatmo": "1.1.1",
     "node-hue-api": "1.0.0",
     "node-schedule": "0.1.16",
