Updated streaming system
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@113192 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "socketio-wildcard": "0.1.1",
     "tcp-ping": "0.1.1",
     "wemo": "0.2.0",
+    "write-limiter": "0.1.3",
     "ws": "0.7.1",
     "xml2js": "0.4.5"
   },
