Add initial sun event support
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@118631 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "fibaro-api": "0.1.1",
     "firebase": "2.2.3",
     "home-controller": "0.5.2",
+    "iotdb-timers": "0.0.10",
     "ip": "0.3.2",
     "lifx": "0.2.1",
     "mjpeg-consumer": "0.4.0",
