Fix some linter issues
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@119420 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
     "key-spacing": 0,
     "no-process-exit": 0,
     "no-unused-vars": 1,
-    "handle-callback-err": 1
+    "handle-callback-err": 1,
+    "new-cap": 0
   }
 }
