--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "home-controller": "0.5.2",
     "iotdb-timers": "0.0.10",
     "ip": "0.3.2",
-    "lifx": "0.2.1",
+    "lifx": "0.3.1",
     "mjpeg-consumer": "0.4.0",
     "netatmo": "1.2.0",
     "node-hue-api": "1.0.5",
@@ -27,6 +27,7 @@
     "socket.io": "1.3.5",
     "socketio-wildcard": "0.1.1",
     "tcp-ping": "0.1.1",
+    "underscore": "1.6.0",
     "wemo": "0.2.1",
     "write-limiter": "0.1.3",
     "ws": "0.7.1",
