--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "wemo": "0.2.1",
     "write-limiter": "0.1.3",
     "ws": "0.7.2",
+    "ws-heartbeats": "^1.0.0",
     "xml2js": "0.4.9"
   },
   "private": true
