Add support for running as a nwjs app in windows
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@125392 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "NHomeServer",
   "version": "1.0.0",
+  "main": "nw.html",
+  "window": {
+    "width": 1024,
+    "height": 768,
+    "toolbar": false
+  },
   "dependencies": {
     "adm-zip": "0.4.4",
     "buffer-indexof": "0.0.2",
