--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "NHomeServer",
+  "name": "nhome-server",
   "version": "1.0.0",
+  "license": "(GPL-3.0+ AND MIT)",
   "main": "nw.html",
   "window": {
     "width": 1024,
@@ -41,5 +42,29 @@
     "ws-heartbeats": "^1.0.0",
     "xml2js": "0.4.12"
   },
-  "private": true
+  "bundledDependencies": [
+    "iotdb-timers",
+    "socket.io",
+    "simple-itach",
+    "bunyan-prettystream",
+    "mjpeg-consumer"
+  ],
+  "files": [
+    "common.js",
+    "configuration.js",
+    "connection.js",
+    "devices",
+    "GPLv3.txt",
+    "local",
+    "local.js",
+    "logger.js",
+    "main.js",
+    "nw.html",
+    "nw.js",
+    "permissions.js",
+    "server.js",
+    "services"
+  ],
+  "bin": "./server.js",
+  "private": false
 }
