Update to node-lifx module
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@127635 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "ip": "1.0.0",
     "jpeg-size": "0.0.1",
     "lifx": "0.3.1",
+    "lodash": "3.10.1",
     "mjpeg-consumer": "0.6.2",
     "netatmo": "1.2.0",
     "node-hue-api": "1.0.5",
+    "node-lifx": "0.2.0",
     "node-schedule": "0.2.9",
     "node-uuid": "1.4.3",
     "q": "1.0.1",
