Hide white screen during startup
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@127769 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "window": {
     "width": 1024,
     "height": 768,
-    "toolbar": false
+    "toolbar": false,
+    "show": false
   },
   "dependencies": {
     "adm-zip": "0.4.4",
