Replace sync methods in config saving with a queue
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@127857 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "adm-zip": "0.4.4",
+    "async": "1.4.2",
     "buffer-indexof": "1.0.0",
     "bunyan": "1.5.1",
     "bunyan-prettystream": "0.1.3",
