--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,7 @@
   "rules": {
     "indent": 1,
     "no-use-before-define": 0,
-    "curly": [2, "multi-line"],
+    "curly": 2,
     "no-unused-vars": 1,
     "handle-callback-err": 1,
     "no-console": 0,
