--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "socket.io": "1.3.7",
     "socketio-wildcard": "0.1.1",
     "tcp-ping": "0.1.1",
-    "wemo": "0.2.1",
+    "wemo-client": "0.4.0",
     "write-limiter": "0.1.5",
     "ws": "0.8.0",
     "ws-heartbeats": "^1.0.0",
