--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "ip": "1.0.2",
     "jpeg-size": "0.0.1",
     "lodash": "3.10.1",
-    "mjpeg-consumer": "0.6.2",
+    "mjpeg-consumer": "1.0.3",
     "netatmo": "1.2.0",
     "node-hue-api": "1.1.2",
     "node-lifx": "0.3.0",
@@ -46,8 +46,7 @@
     "iotdb-timers",
     "socket.io",
     "simple-itach",
-    "bunyan-prettystream",
-    "mjpeg-consumer"
+    "bunyan-prettystream"
   ],
   "files": [
     "lib",
