--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "jpeg-size": "0.0.1",
     "lodash": "3.10.1",
     "mjpeg-consumer": "1.0.3",
+    "motion": "0.2.2",
     "netatmo": "1.2.0",
     "node-hue-api": "1.1.2",
     "node-lifx": "0.3.0",
