--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "node-uuid": "1.4.7",
     "request": "2.65.0",
     "simple-itach": "0.2.1",
-    "socket.io": "1.3.7",
+    "socket.io": "socketio/socket.io",
+    "socket.io-client": "socketio/socket.io-client",
     "socketio-wildcard": "0.1.1",
     "tcp-ping": "0.1.1",
     "wemo-client": "0.4.0",
