Update to socket.io 1.4.0
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@133215 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "node-uuid": "1.4.7",
     "request": "2.67.0",
     "simple-itach": "0.2.1",
-    "socket.io": "socketio/socket.io",
-    "socket.io-client": "socketio/socket.io-client",
+    "socket.io": "1.4.0",
+    "socket.io-client": "1.4.0",
     "socketio-wildcard": "0.3.0",
     "tcp-ping": "0.1.1",
     "wemo-client": "0.6.1",
