--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bunyan-prettystream": "0.1.3",
     "chroma-js": "1.1.1",
     "commander": "2.9.0",
+    "deep-extend": "0.4.0",
     "express": "4.13.3",
     "fibaro-api": "0.1.1",
     "firebase": "2.3.2",
