--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "chroma-js": "1.1.1",
     "commander": "2.9.0",
     "deep-extend": "0.4.0",
+    "es6-promise": "3.0.2",
     "express": "4.13.3",
     "fibaro-api": "0.1.1",
     "firebase": "2.3.2",
