Update local mode
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@133792 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/local/manifest.json
+++ b/local/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "nHome web",
-  "name": "nHome - solutions for smart homes",
+  "short_name": "NHome web",
+  "name": "NHome - solutions for smart homes",
   "lang": "en-US",
   "icons": [{
     "src": "img/logo/mobile/nhome-icon-xl.png",
