Switch from full express to just serve-static
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@133927 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "commander": "2.9.0",
     "deep-extend": "0.4.0",
     "es6-promise": "3.0.2",
-    "express": "4.13.3",
     "fibaro-api": "0.1.1",
+    "finalhandler": "^0.4.1",
     "firebase": "2.3.2",
     "home-controller": "0.5.2",
     "iotdb-timers": "0.0.12",
@@ -35,6 +35,7 @@
     "node-schedule": "0.6.0",
     "node-uuid": "1.4.7",
     "request": "2.67.0",
+    "serve-static": "^1.10.1",
     "simple-itach": "0.2.1",
     "socket.io": "1.4.4",
     "socket.io-client": "1.4.4",
