Add support for recording thumbnails
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@134822 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fibaro-api": "0.1.1",
     "finalhandler": "^0.4.1",
     "firebase": "2.3.2",
+    "first-n-stream": "2.0.0",
     "home-controller": "0.5.2",
     "iotdb-timers": "0.0.12",
     "ip": "1.1.0",
