--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "adm-zip": "0.4.7",
     "async": "1.5.1",
     "buffer-indexof": "1.0.0",
+    "buffers": "0.1.1",
     "bunyan": "1.5.1",
     "bunyan-prettystream": "0.1.3",
     "chroma-js": "1.1.1",
@@ -28,7 +29,6 @@
     "ip": "1.1.0",
     "jpeg-size": "0.0.1",
     "lodash": "3.10.1",
-    "mjpeg-consumer": "1.0.5",
     "mkdirp": "0.5.1",
     "motion": "0.2.2",
     "netatmo": "1.2.0",
