Adopt the motion module
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@135423 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "jpeg-size": "0.0.1",
     "lodash": "4.3.0",
     "mkdirp": "0.5.1",
-    "motion": "0.2.2",
     "netatmo": "1.2.0",
     "node-hue-api": "2.0.0",
     "node-lifx": "0.4.0",
@@ -43,6 +42,7 @@
     "socket.io-client": "1.4.4",
     "socketio-wildcard": "0.3.0",
     "tcp-ping": "0.1.1",
+    "ttq": "0.1.2",
     "wemo-client": "0.6.2",
     "write-limiter": "0.1.5",
     "ws": "1.0.1",
