--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-lifx": "0.4.0",
     "node-schedule": "1.0.0",
     "node-uuid": "1.4.7",
+    "onvif": "0.4.0",
     "request": "2.69.0",
     "serve-static": "1.10.2",
     "simple-itach": "0.2.1",
