Add welcome page, streaming improvements, child+respawn on windows
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@138833 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/asustor/config.json
+++ b/asustor/config.json
@@ -17,7 +17,7 @@
          "type":"custom",
 		 "protocol":"http",
          "port":38736,
-		 "url":"/redirect"
+		 "url":"/welcome"
       },
       "privilege":{
          "accessible":"users",
