--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "chroma-js": "1.1.1",
     "commander": "2.9.0",
     "deep-extend": "0.4.1",
+    "duplexer2": "0.1.4",
     "es6-promise": "3.1.2",
     "fibaro-api": "0.1.1",
     "finalhandler": "^0.4.1",
     "firebase": "2.4.1",
-    "first-n-stream": "2.0.0",
     "home-controller": "0.5.2",
     "iotdb-timers": "0.0.12",
     "ip": "1.1.2",
@@ -35,12 +35,14 @@
     "node-schedule": "1.1.0",
     "node-uuid": "1.4.7",
     "onvif": "0.4.0",
+    "pump": "1.0.1",
     "request": "2.69.0",
     "serve-static": "1.10.2",
     "simple-itach": "0.2.1",
     "socket.io": "1.4.4",
     "socket.io-client": "1.4.4",
     "socketio-wildcard": "0.3.0",
+    "sse": "0.0.6",
     "tcp-ping": "0.1.1",
     "ttq": "0.1.2",
     "webm-byte-stream": "0.1.4",
