Load all .js files in lib/devices and lib/services instead of using a hardcoded list
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@141962 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fibaro-api": "0.1.1",
     "finalhandler": "^0.4.1",
     "firebase": "2.4.1",
+    "glob": "6.0.4",
     "home-controller": "0.5.2",
     "iotdb-timers": "0.0.12",
     "ip": "1.1.2",
