Add support for environment file to service
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@142010 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/nhomeserver.service
+++ b/nhomeserver.service
@@ -8,6 +8,7 @@ User=nhome
 Group=nhome
 Restart=always
 MemoryLimit=512M
+EnvironmentFile=-/etc/sysconfig/nhomeserver
 
 [Install]
 WantedBy=basic.target
