Add --claim cli option
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@142118 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "pump": "1.0.1",
     "request": "2.69.0",
     "serve-static": "1.10.2",
+    "simple-get": "^2.2.2",
     "simple-itach": "0.2.1",
     "socket.io": "1.4.8",
     "socket.io-client": "1.4.8",
