--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "node-uuid": "1.4.7",
     "onvif": "0.4.0",
     "pump": "1.0.1",
+    "read": "1.0.7",
     "request": "2.69.0",
     "serve-static": "1.10.2",
     "simple-get": "^2.2.2",
