--- a/package.json
+++ b/package.json
@@ -38,9 +38,8 @@
     "onvif": "0.4.0",
     "pump": "1.0.1",
     "read": "1.0.7",
-    "request": "2.69.0",
     "serve-static": "1.10.2",
-    "simple-get": "^2.2.2",
+    "simple-get": "2.3.0",
     "simple-itach": "0.2.1",
     "socket.io": "1.4.8",
     "socket.io-client": "1.4.8",
