--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "netatmo": "1.4.0",
     "node-hue-api": "2.2.0",
     "node-lifx": "0.5.1",
+    "node-orvibo": "1.1.0",
     "node-schedule": "1.1.0",
     "node-uuid": "1.4.7",
     "onvif": "0.4.0",
