Add new eynio branding
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@142409 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/asustor/config.json
+++ b/asustor/config.json
@@ -1,14 +1,14 @@
 {
    "general":{
-      "package":"NHomeServer",
-      "name":"NHome Server",
+      "package":"EynioServer",
+      "name":"Eynio Server",
       "version":"1.0.0",
       "depends":["nodejs"],
       "conflicts":[],
-      "developer":"NHome",
-      "maintainer":"NHome",
-      "email":"atkinson.tommy@nhome.ba",
-      "website":"https://nhome.ba/",
+      "developer":"Eynio",
+      "maintainer":"Eynio",
+      "email":"info@eynio.com",
+      "website":"https://eynio.com/",
       "architecture":"any",
       "firmware":"2.0"
    },
