--- a/package.json
+++ b/package.json
@@ -11,35 +11,35 @@
   },
   "dependencies": {
     "adm-zip": "0.4.7",
-    "async": "2.0.1",
+    "async": "2.1.2",
     "bl": "1.1.2",
-    "buffer-indexof": "1.0.0",
-    "bunyan": "1.7.1",
-    "chroma-js": "1.1.1",
+    "buffer-indexof": "1.1.0",
+    "bunyan": "1.8.5",
+    "chroma-js": "1.2.1",
     "commander": "2.9.0",
     "deep-extend": "0.4.1",
     "duplexer2": "0.1.4",
-    "es6-promise": "3.1.2",
+    "es6-promise": "4.0.5",
     "fibaro-api": "0.1.1",
-    "finalhandler": "^0.4.1",
+    "finalhandler": "0.5.1",
     "firebase": "2.4.1",
-    "glob": "6.0.4",
+    "glob": "7.1.1",
     "home-controller": "0.5.2",
     "iotdb-timers": "0.0.12",
-    "ip": "1.1.2",
+    "ip": "1.1.4",
     "jpeg-size": "0.0.1",
-    "lodash": "4.6.1",
+    "lodash": "4.17.2",
     "mkdirp": "0.5.1",
     "netatmo": "1.4.0",
-    "node-hue-api": "2.2.0",
-    "node-lifx": "0.5.1",
+    "node-hue-api": "2.3.0",
+    "node-lifx": "0.6.0",
     "node-orvibo": "1.1.0",
-    "node-schedule": "1.1.0",
+    "node-schedule": "1.2.0",
     "node-uuid": "1.4.7",
-    "onvif": "0.4.0",
+    "onvif": "0.5.3",
     "pump": "1.0.1",
     "read": "1.0.7",
-    "serve-static": "1.10.2",
+    "serve-static": "1.11.1",
     "simple-get": "2.3.0",
     "simple-itach": "0.2.1",
     "socket.io": "1.4.8",
@@ -49,11 +49,11 @@
     "tcp-ping": "0.1.1",
     "ttq": "0.1.2",
     "webm-byte-stream": "0.1.4",
-    "wemo-client": "0.6.6",
+    "wemo-client": "0.11.2",
     "write-limiter": "0.1.5",
     "ws": "1.1.1",
     "ws-heartbeats": "^1.0.0",
-    "xml2js": "0.4.16"
+    "xml2js": "0.4.17"
   },
   "files": [
     "lib",
