Switch from node-uuid to uuid
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@142630 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "node-lifx": "0.6.0",
     "node-orvibo": "1.1.0",
     "node-schedule": "1.2.0",
-    "node-uuid": "1.4.7",
     "onvif": "0.5.3",
     "pump": "1.0.1",
     "read": "1.0.7",
@@ -48,6 +47,7 @@
     "sse": "0.0.6",
     "tcp-ping": "0.1.1",
     "ttq": "0.1.2",
+    "uuid": "3.0.1",
     "webm-byte-stream": "0.1.4",
     "wemo-client": "0.11.2",
     "write-limiter": "0.1.5",
