--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nhome-server",
+  "name": "eynio-server",
   "version": "1.0.0",
   "license": "(GPL-3.0+ AND MIT)",
   "main": "nwjs/index.html",
