Add initial xiaomi sensors support
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@144211 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "node-lifx": "0.8.0",
     "node-orvibo": "1.1.0",
     "node-schedule": "1.2.0",
+    "node-xiaomi-smart-home": "0.1.4",
     "onvif": "0.5.3",
     "pump": "1.0.1",
     "read": "1.0.7",
