Change Asustor package to EynioConnect
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@144213 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/asustor/config.json
+++ b/asustor/config.json
@@ -1,7 +1,7 @@
 {
    "general":{
-      "package":"EynioServer",
-      "name":"Eynio Server",
+      "package":"EynioConnect",
+      "name":"Eynio Connect",
       "version":"1.0.0",
       "depends":["nodejs"],
       "conflicts":[],
