--- a/eynioconnect.service
+++ b/eynioconnect.service
@@ -1,11 +1,12 @@
 [Unit]
-Description=NHome
-After=network.target
+Description=EynioConnect
+Wants=network-online.target
+After=network.target network-online.target
 
 [Service]
-User=nhome
-Group=nhome
-EnvironmentFile=-/etc/sysconfig/nhomeserver
+User=eynio
+Group=eynio
+EnvironmentFile=-/etc/sysconfig/eynioconnect
 ExecStart=/usr/bin/node --max_semi_space_size=2 --max_old_space_size=256 --max_executable_size=192 /opt/eynioconnect/server.js $OPTIONS
 Restart=always
 
