--- a/debian/control
+++ b/debian/control
@@ -1,12 +1,12 @@
-Source: nhomeserver
+Source: eynioconnect
 Section: net
 Priority: extra
-Maintainer: Neosoft builder <builder@neosoft.ba>
+Maintainer: Eynio builder <info@eynio.com>
 Build-Depends: debhelper (>= 8.0.0)
 Standards-Version: 3.9.2
-Homepage: http://www.nhome.ba/
+Homepage: https://eynio.com/
 
-Package: nhomeserver
+Package: eynioconnect
 Architecture: all
-Depends: ${misc:Depends}, nodejs (>= 0.10)
-Description: NHome homeserver
+Depends: ${misc:Depends}, nodejs (>= 4.1.0)
+Description: Eynio Connect
