Enable nhomeserver service if nhome user exists (legacy installation)
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@144224 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/eynioconnect.service
+++ b/eynioconnect.service
@@ -2,6 +2,7 @@
 Description=EynioConnect
 Wants=network-online.target
 After=network.target network-online.target
+Conflicts=nhomeserver.service
 
 [Service]
 User=eynio
