Fix reference to eynioconnectdev
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@144234 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/debian/eynioconnect-autoupdate.service
+++ b/debian/eynioconnect-autoupdate.service
@@ -6,7 +6,7 @@ After=network-online.target
 [Service]
 ExecStart=/usr/bin/node /opt/eynioconnect/server.js
 ExecStartPre=/usr/bin/apt-get update
-ExecStartPre=/usr/bin/apt-get -y install eynioconnectdev
+ExecStartPre=/usr/bin/apt-get -y install eynioconnect
 User=eynio
 PermissionsStartOnly=true
 Restart=always
