Add missing deps
git-svn-id: svn://internal-repo/nsc/NHome/homeserver@144275 bc4cc02b-413e-4181-b44e-24092dc36e11

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jpeg-size": "0.0.1",
     "lodash": "4.17.4",
     "mkdirp": "0.5.1",
+    "mp4-stream": "2.0.2",
     "netatmo": "2.1.0",
     "node-hue-api": "2.3.0",
     "node-lifx": "0.8.0",
@@ -38,6 +39,7 @@
     "onvif": "0.5.3",
     "pump": "1.0.1",
     "read": "1.0.7",
+    "safe-buffer": "5.0.1",
     "serve-static": "1.11.1",
     "simple-get": "2.3.0",
     "simple-itach": "0.2.1",
