--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
   "extends": "eslint:recommended",
   "env": {
-    "node": true
+    "node": true,
+    "es6": true
   },
   "rules": {
     "indent": 1,
@@ -11,6 +12,7 @@
     "handle-callback-err": 1,
     "no-console": 0,
     "no-trailing-spaces": 2,
-    "strict": 2
+    "strict": 2,
+    "no-buffer-constructor": 1
   }
 }
